--- a/frontend/src/pages/game.css
+++ b/frontend/src/pages/game.css
@@ -14,7 +14,7 @@
 .game-box-horizontal {
 	display: flex;
 	flex-direction: row;
-	align-items: center; 
+	align-items: center;
 	gap: 30px;
 	padding: 30px 20px;
 	background: rgba(0, 0, 0, 0.4);
@@ -90,4 +90,34 @@
 .tetris-cell.invisible {
 	background-color: transparent !important;
 	box-shadow: none !important;
+}
+
+
+
+.overlay-start {
+	position: absolute;
+	inset: 0;
+	background-color: rgba(0, 0, 0, 0.85);
+	color: white;
+	z-index: 999;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.overlay-content {
+	text-align: center;
+}
+
+.overlay-content ul {
+	list-style: none;
+	padding: 0;
+	margin: 10px 0;
+}
+
+.overlay-content button {
+	padding: 10px 20px;
+	font-size: 1rem;
+	margin-top: 20px;
+	cursor: pointer;
 }
